# geographiclib

./: .gitattributes  .gitignore  00README.txt  AUTHORS  AzimuthalEquidistant.cpp  AzimuthalEquidistant.hpp  CMakeLists.txt  CartConvert.cpp  CartConvert.vcproj  CassiniSoldner.cpp  CassiniSoldner.hpp  Constants.cpp  Constants.hpp  DMS.cpp  DMS.hpp  Doxyfile  ECEF.cpp  ECEF.hpp  ECEFConvert.cpp  EllipticFunction.cpp  EllipticFunction.hpp  EquidistantTest.cpp  EquidistantTest.vcproj  GeoConvert.cpp  GeoCoords.cpp  GeoCoords.hpp  Geocentric.cpp  Geocentric.hpp  Geod.cpp  Geod.vcproj  Geodesic.cpp  Geodesic.hpp  Geographic.doc  GeographicLib.sln  GeographicLib.vcproj  Geoid.cpp  Geoid.hpp  GeoidEval.cpp  GeoidEval.vcproj  HOWTO-RELEASE.txt  (+53 more)
GeographicLib/: 00README.txt  AzimuthalEquidistant.cpp  AzimuthalEquidistant.hpp  CartConvert.cpp  CassiniSoldner.cpp  CassiniSoldner.hpp  Constants.cpp  Constants.hpp  DMS.cpp  DMS.hpp  Doxyfile  ECEF.cpp  ECEF.hpp  ECEFConvert.cpp  ECEFConvert.vcproj  EllipticFunction.cpp  EllipticFunction.hpp  EquidistantTest.cpp  GeoConvert.cpp  GeoConvert.vcproj  GeoCoords.cpp  GeoCoords.hpp  Geocentric.cpp  Geocentric.hpp  Geod.cpp  Geodesic.cpp  Geodesic.hpp  Geographic.doc  GeographicLib.sln  GeographicLib.vcproj  Geoid.cpp  Geoid.hpp  GeoidEval.cpp  GeoidEval.vcproj  INSTALL  LocalCartesian.cpp  LocalCartesian.hpp  MGRS.cpp  MGRS.hpp  Makefile  (+33 more)
cmake/: CMakeLists.txt  FindGeographicLib.cmake  Makefile.am  Makefile.in  Makefile.mk  geographiclib-config-version.cmake.in  geographiclib-config.cmake.in  maintainer-man.cmake  maintainer-top.cmake  project-config-version.cmake.in  project-config.cmake.in  project.pc.in
develop/: AreaEst.cpp  CMakeLists.txt  ClosestApproach.cpp  ConicTest.cpp  Geod3Test.cpp  GeodConv.cpp  GeodTest.cpp  Geodesic30.cpp  Geodesic30.hpp  GeodesicLine30.cpp  GeodesicLine30.hpp  GeoidHeightTable.cpp  HarmTest.cpp  IntersectTest.cpp  JacobiTest.cpp  LevelEllipsoid.cpp  NaNTester.cpp  ProjTest.cpp  TMTest.cpp  diag.sh  ellset.sh  listallfiles.sh  matlab-toolbox-config.sh  promote.cpp  reformat.cpp  runtests.sh  test-distribution.sh
doc/: .gitattributes  CMakeLists.txt  CartConvert.1.html  Doxyfile  Geod.1.html  Geographic.doc  Geographic.dox  GeographicLib.dox  GeographicLib.dox.in  Makefile  Makefile.am  Makefile.in  Makefile.mk  NETGeographic.dox  NETGeographicLib.dox  TransverseMercatorTest.1.html  doxyfile-c.in  doxyfile-for.in  doxyfile-java.in  doxyfile-net.in  doxyfile.in  geodesic-c.dox  geodesic-for.dox  geodesic-java.dox  geodseries30.html  graticule.m  index.html.in  thompson-tm-graticule.eps  tmseries30.html  utilities.html.in
examples/: AuxLatitude.cpp  AuxLatitude.hpp  CMakeLists.txt  GeoidToGTX.cpp  JacobiConformal.cpp  JacobiConformal.hpp  Makefile.am  Makefile.in  RhumbSolve.cpp  example-Accumulator.cpp  example-AlbersEqualArea.cpp  example-Angle.cpp  example-AuxAngle.cpp  example-AuxLatitude.cpp  example-AzimuthalEquidistant.cpp  example-Cartesian3.cpp  example-CassiniSoldner.cpp  example-CircularEngine.cpp  example-Conformal3.cpp  example-Constants.cpp  example-DMS.cpp  example-DST.cpp  example-Ellipsoid.cpp  example-Ellipsoid3.cpp  example-EllipticFunction.cpp  example-GeoCoords.cpp  example-Geocentric.cpp  example-Geodesic-small.cpp  example-Geodesic.cpp  example-Geodesic3.cpp  example-GeodesicLine.cpp  example-GeodesicLine3.cpp  example-GeodesicLineExact.cpp  example-GeographicErr.cpp  example-Geohash.cpp  example-Geoid.cpp  example-Gnomonic.cpp  example-GravityCircle.cpp  example-GravityModel.cpp  example-Intersect.cpp  (+26 more)
experimental/: AuxAngle.cpp  AuxAngle.hpp  AuxLatitude.cpp  AuxLatitude.hpp  CMakeLists.txt  DAuxLatitude.cpp  DAuxLatitude.hpp  Geod3ODE.cpp  JacobiConformal.hpp  Makefile.am  Makefile.in  NRhumbSolve.cpp  NRhumbSolve.usage  Rhumb.cpp  Rhumb.hpp  TriaxialGeodesicODE.cpp  TriaxialGeodesicODE.hpp  example-AuxLatitude.cpp
include/: .gitignore  Makefile  Makefile.am  Makefile.in  Makefile.mk
legacy/: .gitignore  CMakeLists.txt  Makefile  geodc.c  geodesicc.c  geodesicc.h  geodesicf.f  geodf.f
man/: CMakeLists.txt  Cart3Convert.1  Cart3Convert.1.html  Cart3Convert.pod  Cart3Convert.usage  CartConvert.1  CartConvert.1.html  CartConvert.pod  CartConvert.usage  Conformal3Proj.1  Conformal3Proj.1.html  Conformal3Proj.pod  Conformal3Proj.usage  ConicProj.1  ConicProj.1.html  ConicProj.pod  ConicProj.usage  EquidistantTest.1  GeoConvert.1  GeoConvert.1.html  GeoConvert.pod  GeoConvert.usage  Geod.1  Geod.1.html  Geod.pod  Geod.usage  Geod3Solve.1  Geod3Solve.1.html  Geod3Solve.pod  Geod3Solve.usage  GeodSolve.1  GeodSolve.1.html  GeodSolve.pod  GeodSolve.usage  GeodesicProj.1  GeodesicProj.1.html  GeodesicProj.pod  GeodesicProj.usage  GeoidEval.1  GeoidEval.1.html  (+36 more)
matlab/: .gitignore  CMakeLists.txt  Makefile.am  Makefile.in  Makefile.mk  cassini_fwd.m  cassini_inv.m  compilematlabfuns.m  defaultellipsoid.m  ecc2flat.m  eqdazim_fwd.m  eqdazim_inv.m  eqdazimfwd.m  eqdazimrev.m  flat2ecc.m  gedistance.m  gedoc.m  geocent_fwd.m  geocent_inv.m  geocentricforward.cpp  geocentricforward.m  geocentricforward_a.m  geocentricreverse.cpp  geocentricreverse.m  geocentricreverse_a.m  geodarea.m  geoddistance.m  geoddistance_alt.m  geoddoc.m  geodesicdirect.cpp  geodesicdirect.m  geodesicdirect_a.m  geodesicinverse.cpp  geodesicinverse.m  geodesicinverse_a.m  geodesicline.cpp  geodesicline.m  geodesicline_a.m  geodesicpath.cpp  geodproj.m  (+49 more)
python/: .gitignore  CMakeLists.txt  GeographicLib.py  Makefile.am  Makefile.in  Makefile.mk  README.rst  README.txt  setup.cfg  setup.py
src/: .gitignore  Accumulator.cpp  AlbersEqualArea.cpp  Angle.cpp  AuxAngle.cpp  AuxLatitude.cpp  AzimuthalEquidistant.cpp  CMakeLists.txt  Cartesian3.cpp  CassiniSoldner.cpp  CircularEngine.cpp  Conformal3.cpp  DAuxLatitude.cpp  DMS.cpp  DST.cpp  Ellipsoid.cpp  Ellipsoid3.cpp  EllipticFunction.cpp  GARS.cpp  GeoCoords.cpp  Geocentric.cpp  Geodesic.cpp  Geodesic3.cpp  GeodesicExact.cpp  GeodesicExactC4.cpp  GeodesicLine.cpp  GeodesicLine3.cpp  GeodesicLineExact.cpp  Geographic.pro  GeographicLib.pro  Geohash.cpp  Geoid.cpp  Georef.cpp  (+32 more)
(+1416 files in other folders)
